--- a/packages/tms-app/package.json
+++ b/packages/tms-app/package.json
@@ -22,6 +22,7 @@
     "@han-keong/tms-validators": "^2.0.0",
     "axios": "^1.5.1",
     "babel-loader": "^9.1.3",
+    "babel-plugin-webpack-alias": "^2.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "dotenv-webpack": "^8.0.1",
     "react": "^18.2.0",
@@ -37,4 +38,3 @@
     "webpack-cli": "^5.1.4"
   }
 }
-
