--- a/packages/tms-app/package.json
+++ b/packages/tms-app/package.json
@@ -25,6 +25,8 @@
     "babel-plugin-webpack-alias": "^2.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "dotenv-webpack": "^8.0.1",
+    "html-webpack-harddisk-plugin": "^2.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
