--- a/packages/tms-api/example.env
+++ b/packages/tms-api/example.env
@@ -1,11 +1,11 @@
 PORT = 4000
 
-DB_HOST = 127.0.0.1
-DB_USER = test
-DB_PASSWORD = test
-DB_DATABASE = tms
+DB_HOST = db-host
+DB_USER = db-username
+DB_PASSWORD = db-password
+DB_DATABASE = db-database
 
-SMTP_HOST = sandbox.smtp.mailtrap.io
+SMTP_HOST = smtp-host
 SMTP_PORT = 2525
 SMTP_USER = smtp-username
 SMTP_PASS = smtp-password
